--- a/数据结构/查找/二分查找法.md
+++ b/数据结构/查找/二分查找法.md
@@ -15,7 +15,7 @@
 
 例如：使用二分查找算法在数组{0,1,2,3,4,5,6,7,8,9}中查找元素7.
 
-![Untitled](%E4%BA%8C%E5%88%86%E6%9F%A5%E6%89%BE%E7%AE%97%E6%B3%95%202e8bb/Untitled.png)
+![image](https://user-images.githubusercontent.com/72934930/162130614-ab8e0830-e8e4-4147-a512-a0ae80e895bf.png)
 
 实现代码如下所示。
 
