--- a/数据结构/查找/顺序查找算法.md
+++ b/数据结构/查找/顺序查找算法.md
@@ -8,7 +8,7 @@
 
 例如：使用顺序查找算法在数组{ 4,2,8,0,5,7,1,3,6,9 }中查找元素7.
 
-![Untitled](%E9%A1%BA%E5%BA%8F%E6%9F%A5%E6%89%BE%E7%AE%97%E6%B3%95%208a834/Untitled.png)
+![image](https://user-images.githubusercontent.com/72934930/162130957-e69e44c9-8966-4732-8169-31ef78b1e798.png)
 
 实现代码如下所示。
 
