--- a/线性结构/线性表.md
+++ b/线性结构/线性表.md
@@ -16,7 +16,7 @@
     
     数组各分量对应多项式各项，a[i]为项$x^i$的系数$a_i$。例如，$f(X） = 4x^5 - 3x^2 + 1$表示成
     
-    ![Untitled](%E7%BA%BF%E6%80%A7%E8%A1%A8%204c13c/Untitled.png)
+    ![Untitled](https://user-images.githubusercontent.com/72934930/162866868-183b0b93-d3de-485e-8908-9bf0d4e9dbf2.png)
     
     两个多项式相加：两个数组对应分量相加。
     
@@ -30,7 +30,7 @@
     
     例如$P_1(x)=9x^{12}+15x^8+3x^2$，$P_2(x)=23x^{19}-4x^8-13x^6+82$表示成
     
-    ![Untitled](%E7%BA%BF%E6%80%A7%E8%A1%A8%204c13c/Untitled%201.png)
+    ![Untitled 1](https://user-images.githubusercontent.com/72934930/162866901-61ffff5c-e0aa-416a-8d5d-d287d91753e9.png)
     
     按指数大小有序存储！
     
@@ -40,11 +40,11 @@
     
     链表中每个节点存储多项式中的一个非零项，包含系数和指数两个数据域以及一个指针域。
     
-    ![Untitled](%E7%BA%BF%E6%80%A7%E8%A1%A8%204c13c/Untitled%202.png)
+    ![Untitled 2](https://user-images.githubusercontent.com/72934930/162866936-7ded7c04-668f-4372-9938-a8a744d12aba.png)
     
     例如$P_1(x)=9x^{12}+15x^8+3x^2$，$P_2(x)=23x^{19}-4x^8-13x^6+82$，链式存储形式如下所示。
     
-    ![Untitled](%E7%BA%BF%E6%80%A7%E8%A1%A8%204c13c/Untitled%203.png)
+    ![Untitled 3](https://user-images.githubusercontent.com/72934930/162866958-2471db8d-00ad-4362-8d20-3152b85bdacb.png)
     
     链式结构定义如下所示。
     
@@ -94,7 +94,7 @@
 
 利用数组的连续存储空间存放线性表的各元素。线性表的顺序存储中的下标从0开始。
 
-![Untitled](%E7%BA%BF%E6%80%A7%E8%A1%A8%204c13c/Untitled%204.png)
+![Untitled 4](https://user-images.githubusercontent.com/72934930/162866996-cb3926b8-a0f6-4824-83c8-8961144435db.png)
 
 线性表的顺序存储结构定义如下所示。
 
@@ -163,7 +163,7 @@ List MakeEmpty( )
 
 ### 3. 插入（第$i$(1 ≤ i ≤ n + 1)个位置上插入一个值为X的新元素）
 
-![Untitled](%E7%BA%BF%E6%80%A7%E8%A1%A8%204c13c/Untitled%205.png)
+![Untitled 5](https://user-images.githubusercontent.com/72934930/162867104-3fb5388a-8015-498a-9818-2bbde6e58984.png)
 
 ```c
 void Insert(ElementType x, int i, List PtrL)
@@ -192,7 +192,7 @@ void Insert(ElementType x, int i, List PtrL)
 
 ### 3. 删除
 
-![Untitled](%E7%BA%BF%E6%80%A7%E8%A1%A8%204c13c/Untitled%206.png)
+![Untitled 6](https://user-images.githubusercontent.com/72934930/162867138-1f691fcd-633b-4369-b848-24f842174158.png)
 
 ```c
 void Delete(int i, List PtrL)
@@ -352,7 +352,7 @@ int main()
 
 代码运行结果如下图所示。
 
-![Untitled](%E7%BA%BF%E6%80%A7%E8%A1%A8%204c13c/Untitled%207.png)
+![Untitled 7](https://user-images.githubusercontent.com/72934930/162867189-7742ca21-e9ad-4ed3-9971-2f9b1d6c2095.png)
 
 ## 5 线性表的链式存储实现
 
@@ -374,7 +374,7 @@ List PtrL;
 
 线性表的链式存储中的下标从1开始。
 
-![Untitled](%E7%BA%BF%E6%80%A7%E8%A1%A8%204c13c/Untitled%208.png)
+![Untitled 8](https://user-images.githubusercontent.com/72934930/162867228-37ef6c33-59ab-4a4b-a639-dabe77812524.png)
 
 **主要操作实现**：
 
@@ -440,7 +440,7 @@ int Length(List PtrL)
 
 **思考**：修改指针的两个步骤如果交换一下，将会发生什么?
 
-![Untitled](%E7%BA%BF%E6%80%A7%E8%A1%A8%204c13c/Untitled%209.png)
+![Untitled 9](https://user-images.githubusercontent.com/72934930/162867249-7e38f192-eba3-4c5e-b05c-4ecbf91eae48.png)
 
 ```c
 List Insert(ElementType X, int i,List PtrL)
@@ -480,7 +480,7 @@ List Insert(ElementType X, int i,List PtrL)
 
 **思考**：操作指针的几个步骤如果随意改变，将会发生什么?
 
-![Untitled](%E7%BA%BF%E6%80%A7%E8%A1%A8%204c13c/Untitled%2010.png)
+![Untitled 10](https://user-images.githubusercontent.com/72934930/162866675-ce42dbbe-9f26-4955-a29c-9131667ba8eb.png)
 
 ```c
 List Delete(int i, List PtrL) 
@@ -699,7 +699,7 @@ int main()
 
 代码运行结果如下图所示。
 
-![Untitled](%E7%BA%BF%E6%80%A7%E8%A1%A8%204c13c/Untitled%2011.png)
+![Untitled 11](https://user-images.githubusercontent.com/72934930/162866695-c002179c-308a-4123-b10b-931a9879fc09.png)
 
 ## 6 广义表
 
@@ -709,11 +709,11 @@ int main()
 
 比如将$P(x,y)=(9y^2+4)x^{12}+(15y^3-y)x^8+3x^2$看成$ax^{12}+bx^8+cx^2$，所以上述二元多项式可以用“复杂”链表表示为：
 
-![Untitled](%E7%BA%BF%E6%80%A7%E8%A1%A8%204c13c/Untitled%2012.png)
+![Untitled 12](https://user-images.githubusercontent.com/72934930/162866704-63ec2a9b-ec22-428b-9d34-464285214680.png)
 
 **广义表**(Generalized List)是线性表的推广。对于线性表而言，n个元素都是基本的单元素；广义表中，这些元素不仅可以是单元素也可以是另一个广义表。
 
-![Untitled](%E7%BA%BF%E6%80%A7%E8%A1%A8%204c13c/Untitled%2013.png)
+![Untitled 13](https://user-images.githubusercontent.com/72934930/162866712-71e39ff0-c19e-4645-8c0a-a87d718700f9.png)
 
 广义表的数据结构结构定义如下所示。
 
@@ -757,8 +757,8 @@ $A=\begin{bmatrix}18&0&0&2&0\\0&27&0&0&0\\0&0&0&-4&0\\23&-1&0&0&12\end{bmatrix}$
     - 行指针（或称为向右指针）Right
     - 列指针（或称为向下指针）Down
 
-![Untitled](%E7%BA%BF%E6%80%A7%E8%A1%A8%204c13c/Untitled%2014.png)
+![Untitled 14](https://user-images.githubusercontent.com/72934930/162866784-a529cfa5-4d25-4d95-9e7f-a805f1604d2e.png)
 
 用一个标志与Tag来区别分头街点和非0元素结点：头结点的标识值为“Head”，矩阵非0元素结点的标识值为“Term”，如下图所示。
 
-![Untitled](%E7%BA%BF%E6%80%A7%E8%A1%A8%204c13c/Untitled%2015.png)
+![Untitled 15](https://user-images.githubusercontent.com/72934930/162866794-8ac9f204-143c-416a-bfbf-8fb4f3dc9674.png)
